--- a/config/Wim.wiki
+++ b/config/Wim.wiki
@@ -1,5 +1,4 @@
 = Table of Keybindings =
-
 == CoC LSP Keybindings ==
 
 | Keys       | Function                 |
@@ -12,6 +11,7 @@
 | ]g         | Diagnostics Next         |
 | <leader>ca | Code Action              |
 | <leader>f  | Format Selected Code     |
+| <leader>?  | diagnosticInfo           |
 | K          | Show Hover Documentation |
 
 
@@ -31,7 +31,7 @@
 | <PageDown>  | Buffer Previous                           |
 | <Del>       | Buffer Delete                             |
 | <leader>\   | Border Around Current Line Using Toilet   |
-| <space>e    | File Explorer                             |
+| <leader>e   | File Explorer                             |
 | <leader>T   | New Tab                                   |
 | <leader>mk  | Make View                                 |
 | <leader>i   | Startify Dashboard                        |
