--- a/config/Wim.wiki
+++ b/config/Wim.wiki
@@ -28,7 +28,7 @@
 	* [[#Unimpaired|Unimpaired]]
 
 = How To Use This Wiki =
-press Tab to jumo to the next link (Shift-Tab to go to the previous one), Press
+press Tab to jump to the next link (Shift-Tab to go to the previous one), Press
 Enter on the index titles to jump to that topic.
 	( Pressing Enter on any other word, creates a wiki page under that word! )
 To follow URLs in your browser, press `gx` on them.
@@ -212,7 +212,8 @@ etc ...
 See: https://github.com/tpope/vim-commentary
 
 _Note:_ if you're using Vim 9.1+, there is an internal _comment_ plugin from
-habamax. To use that instead of tpop's _commentary_ do the following:
+habamax which is writen in vim9script. To use that instead of tpop's
+_commentary_ do the following:
 
 - Disable _commentary_ by commenting out it's entry in the plugins section of the `vimrc`
 
@@ -222,7 +223,7 @@ habamax. To use that instead of tpop's _commentary_ do the following:
 - Use the internal _comment_ plugin the same way as _commentary_. The
   Keybindings are the same.
 
-- To make the addition of the plugin permenant, add `packadd comment` to the
+- To make the addition of the plugin permanent, add `packadd comment` to the
   end of the `vimrc`
 
 = Full Plugins List =
@@ -292,7 +293,7 @@ habamax. To use that instead of tpop's _commentary_ do the following:
 | ]g         | Diagnostics Next         |
 | <leader>ca | Code Action              |
 | <leader>f  | Format Selected Code     |
-| <leader>?  | diagnosticInfo           |
+| <leader>?  | diagnostic Info          |
 | K          | Show Hover Documentation |
 | \rc        | Restart CoC              |
 
